FIXED THE BUG FOR ALIGNMENT AND COLOR

--- a/src/app/team-list-container/team-list-container.component.scss
+++ b/src/app/team-list-container/team-list-container.component.scss
@@ -15,6 +15,7 @@ mat-card-title {
     mat-icon {
         display: flex;
         justify-content: right;
-        color: darkslategray;
+        color: rgba(69, 90, 100, .87);
+        margin-right: 12px;
     }
 }
